--- a/now.json
+++ b/now.json
@@ -2,11 +2,8 @@
   "name": "sirupsen.github.io",
   "trailingSlash": true,
   "cleanUrls": true,
-  "redirects": [
-    { "source": "/napkin/", "destination": "https://buttondown.email/computer-napkins", "statusCode": 302 }
-  ],
   "rewrites": [
     { "source": "/napkin/", "destination": "https://buttondown.email/computer-napkins" },
-    { "source": "/brief-bits/", "destination": "https://feeds.transistor.fm/brief-bits" }
+    { "source": "/brief-bits.rss", "destination": "https://feeds.transistor.fm/brief-bits" }
   ]
 }
