--- a/now.json
+++ b/now.json
@@ -2,8 +2,8 @@
   "name": "sirupsen.github.io",
   "trailingSlash": true,
   "cleanUrls": true,
-  "rewrites": [
-    { "source": "/napkin/", "destination": "https://buttondown.email/computer-napkins" },
-    { "source": "/brief-bits.rss", "destination": "https://feeds.transistor.fm/brief-bits" }
+  "redirects": [
+    { "source": "/napkin/", "destination": "https://buttondown.email/computer-napkins", "statusCode": 302 },
+    { "source": "/brief-bits.rss", "destination": "https://feeds.transistor.fm/brief-bits", "statusCode": 302 }
   ]
 }
