--- a/now.json
+++ b/now.json
@@ -11,7 +11,7 @@
       "headers" : [
         {
           "key" : "Cache-Control",
-          "value" : "maxage=604800, s-maxage=604800, stale-while-revalidate"
+          "value" : "max-age=604800, s-maxage=604800, stale-while-revalidate, public"
         }
       ]
     }
