seo, robots.txt

--- a/config.yaml
+++ b/config.yaml
@@ -2,6 +2,7 @@ baseURL: https://sirupsen.com
 languageCode: en-us
 title: Sirupsen.com
 enableEmoji: true
+enableRobotsTXT: true
 author:
   name: "Simon Hørup Eskildsen"
   email: simon@sirupsen.com
